// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseTooltip Snapshots matches Snapshot when position is bottom 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="wrapper light"
    style="width: auto; height: auto;"
  >
    Example tooltip text 
    <div
      class="arrow"
      data-popper-arrow=""
    />
  </div>
</transition-stub>
`;

exports[`BaseTooltip Snapshots matches Snapshot when position is left 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="wrapper light"
    style="width: auto; height: auto;"
  >
    Example tooltip text 
    <div
      class="arrow"
      data-popper-arrow=""
    />
  </div>
</transition-stub>
`;

exports[`BaseTooltip Snapshots matches Snapshot when position is not passed 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="wrapper light"
    style="width: auto; height: auto;"
  >
    Example tooltip text 
    <div
      class="arrow"
      data-popper-arrow=""
    />
  </div>
</transition-stub>
`;

exports[`BaseTooltip Snapshots matches Snapshot when position is right 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="wrapper light"
    style="width: auto; height: auto;"
  >
    Example tooltip text 
    <div
      class="arrow"
      data-popper-arrow=""
    />
  </div>
</transition-stub>
`;

exports[`BaseTooltip Snapshots matches Snapshot when show is false 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="wrapper light"
    style="width: auto; height: auto; display: none;"
  >
    Example tooltip text 
    <div
      class="arrow"
      data-popper-arrow=""
    />
  </div>
</transition-stub>
`;

exports[`BaseTooltip Snapshots matches Snapshot when theme is dark 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="wrapper dark"
    style="width: auto; height: auto;"
  >
    Example tooltip text 
    <div
      class="arrow"
      data-popper-arrow=""
    />
  </div>
</transition-stub>
`;
